fixed nav visibility on desktop

--- a/src/components/card.module.scss
+++ b/src/components/card.module.scss
@@ -7,6 +7,7 @@
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
   display: grid;
   grid-template-rows: 1fr 1fr;
+  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
 
   img {
     position: absolute;
@@ -28,4 +29,9 @@
     margin: 0 0 20px 20px;
     width: 225px;
   }
+}
+
+.card:hover {
+  transform: scale(1.1, 1.1);
+  box-shadow: 0 30px 60px rgba(0, 0, 0, 0.5);
 }
