--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -5,6 +5,22 @@
   z-index: 100;
 }
 
+.header-group-scrolled {
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  background: rgba($color: #ffffff, $alpha: 0.9);
+  padding: 0px;
+
+  .nav-item {
+    color: #000000;
+
+    h3 {
+      margin: 0;
+    }
+  }
+}
+
 .nav-list {
   display: grid;
   max-width: 1050px;
@@ -29,7 +45,6 @@
   }
 
   h3 {
-    margin-bottom: 5px;
     font-size: 1.1rem;
   }
 }
