--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,5 +1,49 @@
 .home {
   padding: 100px 10px;
+
+  .welcome {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+
+    h3 {
+      margin-bottom: 180px;
+    }
+  }
+}
+
+.yellow-line {
+  background-color: #ffbe00;
+  width: 210px;
+  height: 2px;
+}
+
+.card-group {
+  margin: 50px 40px 100px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  align-items: center;
+  justify-items: center;
+  gap: 40px;
+  position: relative;
+
+  h4 {
+    text-transform: uppercase;
+    font-weight: 1400;
+    position: absolute;
+    z-index: -1;
+    font-size: 11em;
+    letter-spacing: 1.6;
+    color: rgba($color: #000000, $alpha: 0.1);
+    top: -160px;
+
+    sup {
+      color: rgba($color: #ffbe00, $alpha: 0.1);
+    }
+  }
 }
 
 .link {
